--- a/contact_importer/csv_importer/templates/base.html
+++ b/contact_importer/csv_importer/templates/base.html
@@ -24,6 +24,7 @@
               <a class="nav-link active" aria-current="page" href="{% url 'index' %}">Home</a>
               {% if user.is_authenticated %}
                 <a class="nav-link" href="{% url 'logout' %}">Logout | User: {{user}}</a>
+                <a class="nav-link" href="{% url 'upload' %}">Upload Files</a>
               {% else %}
                 <a class="nav-link" href="{% url 'signup' %}">Sign up</a>
                 <a class="nav-link" href="{% url 'signin' %}">Sign in</a>
