created view to list files

--- a/contact_importer/user_model/templates/login.html
+++ b/contact_importer/user_model/templates/login.html
@@ -8,7 +8,7 @@
         <form method="POST">
             {% csrf_token %}
             <div class="mb-3">
-            <label for="exampleInputEmail1" class="form-label">Username</label>
+            <label for="exampleInputEmail1" class="form-label">Email</label>
             <input type="text" class="form-control" placeholder="Enter Username" name="username">
             </div>
             <div class="mb-3">
