--- a/contact_importer/csv_importer/templates/base.html
+++ b/contact_importer/csv_importer/templates/base.html
@@ -25,6 +25,7 @@
               {% if user.is_authenticated %}
                 <a class="nav-link" href="{% url 'logout' %}">Logout | User: {{user}}</a>
                 <a class="nav-link" href="{% url 'upload' %}">Upload Files</a>
+                <a class="nav-link" href="{% url 'files' %}">List of Files</a>
               {% else %}
                 <a class="nav-link" href="{% url 'signup' %}">Sign up</a>
                 <a class="nav-link" href="{% url 'signin' %}">Sign in</a>
