--- a/contact_importer/csv_importer/templates/list_of_files.html
+++ b/contact_importer/csv_importer/templates/list_of_files.html
@@ -2,13 +2,29 @@
 
 {% block content %}
 <h1>Your Files</h1>
-<ul>
-{% for file in csvfile_list %}
-    <li>{{ file }}</li>
-{% empty %}
-    <li>No articles yet.</li>
-{% endfor %}
-</ul>
-
+<table class="table">
+    <thead>
+      <tr>
+        <th scope="col">File Name</th>
+        <th scope="col">Action</th>
+      </tr>
+    </thead>
+    <tbody>
+    {% for file in csvfile_list %}
+      <tr>
+        <td>{{ file }}</td>
+        <td><a href="{% url 'process' file.id %}">Process File</a></td>
+      </tr>
+    {% empty %}
+      <tr>
+        <td>No files yet</td>
+        <td></td>
+      </tr>
+    {% endfor %}
+    </tbody>
+  </table>
   <p><a href="{% url 'index' %}">Return to home</a></p>
 {% endblock %}
+
+
+
