Added validation for name, date of birth and phone

--- a/contact_importer/csv_importer/templates/list_of_files.html
+++ b/contact_importer/csv_importer/templates/list_of_files.html
@@ -12,7 +12,7 @@
     <tbody>
     {% for file in csvfile_list %}
       <tr>
-        <td>{{ file }}</td>
+        <td>{{ file.name }}</td>
         <td><a href="{% url 'process' file.id %}">Process File</a></td>
       </tr>
     {% empty %}
