--- a/contact_importer/csv_importer/templates/process_file.html
+++ b/contact_importer/csv_importer/templates/process_file.html
@@ -74,7 +74,7 @@
 
     <button type="submit">Process</button>
   </form>
-  {{ file }}
+  {{ file.file }}
   <p><a href="{% url 'index' %}">Return to home</a></p>
 {% endblock %}
 
