--- a/contact_importer/csv_importer/templates/upload_page.html
+++ b/contact_importer/csv_importer/templates/upload_page.html
@@ -6,6 +6,6 @@
     {{ form.as_p }}
     <button type="submit">Upload</button>
   </form>
-
+{{user}}
   <p><a href="{% url 'index' %}">Return to home</a></p>
 {% endblock %}
