--- a/contact_importer/csv_importer/templates/list_of_contacts.html
+++ b/contact_importer/csv_importer/templates/list_of_contacts.html
@@ -27,7 +27,7 @@
       </tr>
     {% empty %}
       <tr>
-        <td>No files yet</td>
+        <td>No contacts yet</td>
         <td></td>
       </tr>
     {% endfor %}
