Styled login and sign up pages

--- a/contact_importer/user_model/templates/login.html
+++ b/contact_importer/user_model/templates/login.html
@@ -9,7 +9,7 @@
             {% csrf_token %}
             <div class="mb-3">
             <label for="exampleInputEmail1" class="form-label">Email</label>
-            <input type="text" class="form-control" placeholder="Enter Username" name="username">
+            <input type="text" class="form-control" placeholder="Enter Email" name="username">
             </div>
             <div class="mb-3">
             <label for="exampleInputPassword1" class="form-label">Password</label>
